jdbc check added to ValidateContentFieldTest